--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="canonical" href="https://longplayer.github.io/ghp-dep/" />
+    <link rel="manifest" href="/ghp-dep/manifest.webmanifest" />
     <title>Github Page deploy test</title>
+    <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
-    <p>Hellor World!</p>
+    <div class="app">
+      <h1>GitHub page as PWA</h1>
+      <p>Hellor World!</p>
+    </div>
+    <script>
+      if (navigator.serviceWorker) {
+        navigator.serviceWorker.register("/ghp-dep/sw.js", { scope: "/ghp-dep/" })
+      }
+    </script>
+    <script src="js/app.js"></script>
   </body>
 </html>
